# AssetManager

./: .gitignore  pyproject.toml
asset_analysis/: manage.py
asset_analysis/asset_analysis/: asgi.py  settings.py  urls.py  wsgi.py
asset_analysis/assets/: admin.py  apps.py  enums.py  forms.py  models.py  urls.py  views.py
asset_analysis/assets/migrations/: 0001_initial.py  0002_alter_asset_owner_alter_liability_owner.py  0003_stock_remove_liability_owner_delete_asset_and_more.py  0004_alter_stock_id.py  0005_alter_stock_quantity.py  0006_alter_stock_id.py  0007_rename_value_stock_price.py
asset_analysis/assets/templates/assets/: assets.html  detail.html  detailsByTitle.html  new.html
asset_analysis/website/: views.py
asset_analysis/website/templates/: base.html
asset_analysis/website/templates/website/: dashboard.html  welcome.html
assetmanager/: manage.py
assetmanager/assetmanager/: asgi.py  settings.py  urls.py  wsgi.py
assetmanager/conversation/: models.py  urls.py  views.py
assetmanager/conversation/migrations/: 0001_initial.py
assetmanager/conversation/templates/conversation/: inbox.html
assetmanager/core/: views.py
assetmanager/core/templates/core/: base.html  index.html
assetmanager/dashboard/: views.py
assetmanager/dashboard/templates/dashboard/: index.html
assetmanager/stock/: admin.py  forms.py  models.py  urls.py  views.py
assetmanager/stock/migrations/: 0001_initial.py  0002_stock_purchase_price.py
assetmanager/stock/templates/stock/: detail.html  stocks.html  ticker.html
