[tool.poetry]
name = "assetmanager"
version = "0.1.0"
description = ""
authors = ["mahnaze220 <mahnaz.ebrahimi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.2.6"
pillow = "^10.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
